playbooks/roles/transparent_proxy/files/etc/iptables/rules.v4
# Generated by iptables-save v1.8.4 on Sat Nov 20 11:23:15 2021
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sat Nov 20 11:23:15 2021
# Generated by iptables-save v1.8.4 on Sat Nov 20 11:23:15 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Sat Nov 20 11:23:15 2021
# Generated by iptables-save v1.8.4 on Sat Nov 20 11:23:15 2021
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:V2RAY - [0:0]
:V2RAY_MASK - [0:0]
-A PREROUTING -j V2RAY
-A OUTPUT -j V2RAY_MASK
-A V2RAY -d 127.0.0.1/32 -j RETURN
-A V2RAY -p tcp -m tcp --dport 22 -j RETURN
-A V2RAY -d 224.0.0.0/4 -j RETURN
-A V2RAY -d 255.255.255.255/32 -j RETURN
-A V2RAY -d 192.168.31.0/24 -j RETURN
-A V2RAY -p icmp -j RETURN
-A V2RAY -p udp -j TPROXY --on-port 12345 --on-ip 0.0.0.0 --tproxy-mark 0x1/0xffffffff
-A V2RAY -p tcp -j TPROXY --on-port 12345 --on-ip 0.0.0.0 --tproxy-mark 0x1/0xffffffff
-A V2RAY_MASK -d 127.0.0.1/32 -j RETURN
-A V2RAY_MASK -d 224.0.0.0/4 -j RETURN
-A V2RAY_MASK -d 255.255.255.255/32 -j RETURN
-A V2RAY_MASK -d 192.168.31.0/24 -j RETURN
-A V2RAY_MASK -p icmp -j RETURN
-A V2RAY_MASK -m mark --mark 0xff -j RETURN
-A V2RAY_MASK -p udp -j MARK --set-xmark 0x1/0xffffffff
-A V2RAY_MASK -p tcp -j MARK --set-xmark 0x1/0xffffffff
COMMIT
# Completed on Sat Nov 20 11:23:15 2021
